added animation part a

--- a/bakingbasics.html
+++ b/bakingbasics.html
@@ -267,7 +267,10 @@
     </footer>
 
 
-
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+    AOS.init();
+    </script>
     <script src="scripts/header.js"></script>
 </body>
 </html>
