--- a/holidays.html
+++ b/holidays.html
@@ -290,7 +290,10 @@ input[type="checkbox"] {
     </footer>
 
 
-
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+    if (typeof AOS !== 'undefined') { AOS.init(); }
+    </script>
     <script src="scripts/header.js"></script>
     <script src="scripts/data/recipe-Collections.js"></script>
     <script src="scripts/holidays.js"></script>
