--- a/reviews.html
+++ b/reviews.html
@@ -452,7 +452,10 @@ input::placeholder, textarea::placeholder {
     </footer>
 
 
-
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+    AOS.init();
+    </script>
     <script src="scripts/header.js"></script>
     <script src="scripts/form-feedback.js"></script>
 </body>
