--- a/recipe-template.html
+++ b/recipe-template.html
@@ -300,6 +300,10 @@ input::placeholder, textarea::placeholder {
     </div>
   </footer>
 
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   <script src="scripts/header.js"></script>
   <script src="scripts/data/recipe-Collections.js"></script>
   <script src="scripts/recipe-template.js"></script>
